--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=Wave
+APP_NAME=Watkanikdoen
 APP_ENV=local
 APP_KEY=base64:8dQ7xw/kM9EYMV4cUkzKgET8jF4P0M0TOmmqN05RN2w=
 APP_DEBUG=false
 APP_LOG_LEVEL=debug
-APP_URL=http://wave.test
+APP_URL=http://127.0.0.1:8000
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=wave
-DB_USERNAME=root
+DB_DATABASE=watkanikdoen_app
+DB_USERNAME=admin
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
