--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
         "laravel/helpers": "^1.0",
         "laravel/tinker": "^2.0",
         "livewire/livewire": "^2.4",
+        "orangehill/iseed": "^3.0",
         "tcg/voyager": "1.4.x-dev",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "kitloong/laravel-migrations-generator": "^5.0",
         "laravel/dusk": "^6.0",
         "laravel/sail": "^1.4",
         "mockery/mockery": "^1.3.1",
