--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.4",
+        "jenssegers/date": "^4.0",
         "lab404/laravel-impersonate": "^1.2",
         "laravel/framework": "^8.0",
         "laravel/helpers": "^1.0",
