--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "^8.0",
         "laravel/helpers": "^1.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.4",
         "livewire/livewire": "^2.4",
         "orangehill/iseed": "^3.0",
         "tcg/voyager": "1.4.x-dev",
