--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "dependencies": {
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.0",
+        "alpinejs": "^3.7.0",
+        "autoprefixer": "^10.4.0",
         "axios": "^0.24.0",
+        "glob-all": "^3.2.1",
         "laravel-mix": "^6.0.39",
+        "laravel-mix-purgecss": "^6.0.0",
+        "laravel-mix-tailwind": "^0.1.2",
         "leaflet": "^1.7.1",
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.4",
         "vue2-leaflet": "^2.7.1"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
         "cross-env": "^7.0.3",
+        "less": "^4.1.2",
+        "less-loader": "^10.2.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.0.0",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
