--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/admin/js/app.js": "/admin/js/app.js",
+    "/themes/custom/js/app.js": "/themes/custom/js/app.js",
+    "/admin/css/app.css": "/admin/css/app.css",
+    "/themes/custom/css/wave.css": "/themes/custom/css/wave.css"
 }
