--- a/public/themes/custom/mix-manifest.json
+++ b/public/themes/custom/mix-manifest.json
@@ -1,4 +1,6 @@
 {
+    "/public/admin/js/app.js": "/public/admin/js/app.js",
     "/js/app.js": "/js/app.js",
+    "/admin/css/app.css": "/admin/css/app.css",
     "/css/app.css": "/css/app.css"
 }
