Changed location of mixed admin assets

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/admin/js/app.js": "/admin/js/app.js",
+    "/js/app.js": "/js/app.js",
     "/themes/custom/js/app.js": "/themes/custom/js/app.js",
-    "/admin/css/app.css": "/admin/css/app.css",
+    "/css/app.css": "/css/app.css",
     "/themes/custom/css/wave.css": "/themes/custom/css/wave.css"
 }
