--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "devdojo/themes": "0.0.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "grimzy/laravel-mysql-spatial": "^4.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.4",
         "jenssegers/date": "^4.0",
