Basic implementation of Algolia Search

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,10 @@ PADDLE_ENV=sandbox
 WAVE_DOCS=true
 WAVE_DEMO=false
 WAVE_BAR=true
+
+TAILWIND_MODE=watch
+
+QUEUE_CONNECTION=database
+
+ALGOLIA_APP_ID=undefined
+ALGOLIA_SECRET=undefined
