--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "algolia/scout-extended": "^1.20",
         "devdojo/app": "0.11.0",
         "devdojo/themes": "0.0.5",
         "fideloper/proxy": "^4.2",
