--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "algolia/scout-extended": "^1.20",
+        "blade-ui-kit/blade-icons": "^1.1",
         "devdojo/app": "0.11.0",
         "devdojo/themes": "0.0.5",
         "fideloper/proxy": "^4.2",
