--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.7.0",
-        "autoprefixer": "^10.4.0",
         "axios": "^0.24.0",
         "glob-all": "^3.2.1",
         "laravel-mix": "^6.0.39",
@@ -21,19 +20,22 @@
         "laravel-mix-tailwind": "^0.1.2",
         "leaflet": "^1.7.1",
         "lodash": "^4.17.21",
-        "postcss": "^8.4.4",
+        "postcss-scss": "^4.0.2",
+        "vue-tailwind": "^2.5.0",
         "vue2-leaflet": "^2.7.1"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "autoprefixer": "^10.4.0",
         "bootstrap": "^5.1.3",
         "cross-env": "^7.0.3",
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
+        "postcss": "^8.4.5",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "tailwindcss": "^3.0.0",
+        "tailwindcss": "^3.0.6",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
