--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
         "leaflet": "^1.7.1",
         "lodash": "^4.17.21",
         "postcss": "^8.4.4",
-        "vue2-leaflet": "^2.7.1",
-        "vuetify": "^2.6.1"
+        "vue2-leaflet": "^2.7.1"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
         "cross-env": "^7.0.3",
-        "deepmerge": "^4.2.2",
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
         "resolve-url-loader": "^3.1.2",
-        "sass": "~1.32",
-        "sass-loader": "^11.1.1",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "tailwindcss": "^3.0.0",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
