--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=f5bff054e756c7603b8a",
-    "/themes/custom/js/app.js": "/themes/custom/js/app.js?id=a0eb5271a65521379ed8",
-    "/css/app.css": "/css/app.css?id=2cfe9d8297de664448d3",
-    "/themes/custom/css/wave.css": "/themes/custom/css/wave.css?id=492a88f5d1dbc8c0c745"
+    "/js/app.js": "/js/app.js",
+    "/themes/custom/js/app.js": "/themes/custom/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/themes/custom/css/wave.css": "/themes/custom/css/wave.css"
 }
