--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,34 @@
 APP_NAME=Watkanikdoen
 APP_ENV=local
-APP_KEY=base64:8dQ7xw/kM9EYMV4cUkzKgET8jF4P0M0TOmmqN05RN2w=
-APP_DEBUG=false
+APP_KEY=[FILL]
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://127.0.0.1:8000
+APP_URL=[FILL]
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=watkanikdoen_app
-DB_USERNAME=admin
-DB_PASSWORD=
+DB_USERNAME=[FILL]
+DB_PASSWORD=[FILL]
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=9999
+SESSION_DOMAIN=
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=[FILL]
+MAIL_PASSWORD=[FILL]
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -39,13 +40,14 @@ PADDLE_VENDOR_ID=
 PADDLE_VENDOR_AUTH_CODE=
 PADDLE_ENV=sandbox
 
-WAVE_DOCS=true
+WAVE_DOCS=false
 WAVE_DEMO=false
-WAVE_BAR=true
+WAVE_BAR=false
 
 TAILWIND_MODE=watch
 
+SCOUT_QUEUE=true
 QUEUE_CONNECTION=database
 
-ALGOLIA_APP_ID=undefined
-ALGOLIA_SECRET=undefined
+ALGOLIA_APP_ID=[FILL]
+ALGOLIA_SECRET=[FILL]
