--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /node_modules
 /public/hot
+/public/js
+/public/themes/custom/css
+/public/themes/custom/js
 /public/storage
 /public/.well-known
+/public/mix-manifest.json
 /storage/*.key
 /vendor
 /.idea
