--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "algolia/scout-extended": "^1.20",
         "blade-ui-kit/blade-icons": "^1.1",
         "codeat3/blade-ant-design-icons": "^1.2",
+        "codeat3/blade-clarity-icons": "^1.3",
         "devdojo/app": "0.11.0",
         "devdojo/themes": "0.0.5",
         "fideloper/proxy": "^4.2",
