Small fixes in composer loading and profile forms

--- a/composer.json
+++ b/composer.json
@@ -58,10 +58,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [],
-            "providers" : [
-                "Wave\\WaveServiceProvider"
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
