--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "codeat3/blade-clarity-icons": "^1.3",
         "devdojo/app": "0.11.0",
         "devdojo/themes": "0.0.5",
+        "ext-gd": "*",
+        "ext-exif": "*",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "grimzy/laravel-mysql-spatial": "^4.0",
