--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/line-clamp": "^0.3.1",
         "@tailwindcss/typography": "^0.5.0",
+        "@tiptap/starter-kit": "^2.0.0-beta.174",
+        "@tiptap/vue-2": "^2.0.0-beta.76",
         "alpinejs": "^3.7.0",
         "axios": "^0.24.0",
         "glob-all": "^3.2.1",
