--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "laravel-mix-tailwind": "^0.1.2",
         "leaflet": "^1.7.1",
         "lodash": "^4.17.21",
+        "moment": "^2.29.1",
         "postcss-scss": "^4.0.2",
         "vue-croppie": "^2.0.2",
         "vue-tailwind": "^2.5.0",
