--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-exif": "*",
+        "ext-gd": "*",
         "algolia/scout-extended": "^1.20",
+        "artesaos/seotools": "^0.22.0",
         "blade-ui-kit/blade-icons": "^1.1",
         "codeat3/blade-ant-design-icons": "^1.2",
         "codeat3/blade-clarity-icons": "^1.3",
-        "ext-gd": "*",
-        "ext-exif": "*",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "grimzy/laravel-mysql-spatial": "^4.0",
