--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ DB_DATABASE=watkanikdoen_app
 DB_USERNAME=[FILL]
 DB_PASSWORD=[FILL]
 
+UMAMI_URL=[FILL] # without trailing slash
+UMAMI_KEY=[FILL]
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
