Added statistics on dashboard

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DB_PASSWORD=[FILL]
 
 UMAMI_URL=[FILL] # without trailing slash
 UMAMI_KEY=[FILL]
+UMAMI_AUTH_TOKEN=[FILL]
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
