Added hCaptcha to registration

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ UMAMI_URL=[FILL] # without trailing slash
 UMAMI_KEY=[FILL]
 UMAMI_AUTH_TOKEN=[FILL]
 
+H_CAPTCHA_KEY=[FILL]
+H_CAPTCHA_SECRET=[FILL]
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
