Fixed umami authorization

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,8 @@ DB_PASSWORD=[FILL]
 
 UMAMI_URL=[FILL] # without trailing slash
 UMAMI_KEY=[FILL]
-UMAMI_AUTH_TOKEN=[FILL]
+UMAMI_USERNAME=[FILL]
+UMAMI_PASSWORD=[FILL]
 
 H_CAPTCHA_KEY=[FILL]
 H_CAPTCHA_SECRET=[FILL]
