--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "leaflet": "^1.7.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
+        "node-sass": "^6.0.1",
         "postcss-scss": "^4.0.2",
+        "uuid": "^8.3.2",
         "vue-croppie": "^2.0.2",
         "vue-tailwind": "^2.5.0",
         "vue2-leaflet": "^2.7.1"
@@ -45,12 +47,13 @@
         "cross-env": "^7.0.3",
         "eslint": "^8.7.0",
         "eslint-plugin-vue": "^8.3.0",
+        "fast-glob": "^3.2.11",
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
         "postcss": "^8.4.5",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
+        "sass-loader": "^11.1.1",
         "stylelint": "^14.2.0",
         "stylelint-config-standard": "^24.0.0",
         "stylelint-config-standard-scss": "^3.0.0",
