Integration of login and registration (not finished)

--- a/.env.example
+++ b/.env.example
@@ -44,7 +44,7 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-JWT_SECRET=Jrsweag3Mf0srOqDizRkhjWm5CEFcrBy
+JWT_SECRET=
 
 PADDLE_VENDOR_ID=
 PADDLE_VENDOR_AUTH_CODE=
