Update umami websiteId

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DB_PASSWORD=[FILL]
 
 UMAMI_URL=[FILL] # without trailing slash
 UMAMI_KEY=[FILL]
+UMAMI_WEBSITE_ID=[FILL]
 UMAMI_USERNAME=[FILL]
 UMAMI_PASSWORD=[FILL]
 
