--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "ext-exif": "*",
         "ext-gd": "*",
         "artesaos/seotools": "^0.22.0",
@@ -16,7 +16,6 @@
         "codeat3/blade-ant-design-icons": "^1.2",
         "codeat3/blade-clarity-icons": "^1.3",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
         "grimzy/laravel-mysql-spatial": "^4.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.4",
