--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "loader-utils": "^2.0.3",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
-        "node-sass": "^9.0.0",
+        "sass": "^1.69.7",
         "postcss-scss": "^4.0.2",
         "uuid": "^8.3.2",
         "vee-validate": "^3.4.14",
