--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "blade-ui-kit/blade-icons": "^1.1",
         "codeat3/blade-ant-design-icons": "^1.2",
         "codeat3/blade-clarity-icons": "^1.3",
+        "doctrine/dbal": "^2.13",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.4",
         "jenssegers/date": "^4.0",
