Added composer library; ran test

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "orangehill/iseed": "^3.0",
         "staudenmeir/eloquent-eager-limit": "^1.8",
         "stevebauman/purify": "^6.2",
+        "spatie/icalendar-generator": "^2.6",
         "tcg/voyager": "^1.7",
         "tymon/jwt-auth": "^2.1"
     },
