--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@tiptap/vue-2": "^2.0.0-beta.76",
         "alpinejs": "^3.7.0",
         "axios": "^0.24.0",
+        "date-fns": "^3.6.0",
         "exif-js": "^2.3.0",
         "glob-all": "^3.2.1",
         "laravel-mix": "^6.0.39",
@@ -36,8 +37,8 @@
         "loader-utils": "^2.0.3",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
-        "sass": "^1.69.7",
         "postcss-scss": "^4.0.2",
+        "sass": "^1.69.7",
         "uuid": "^8.3.2",
         "vee-validate": "^3.4.14",
         "vue-croppie": "^2.0.2",
