--- a/composer.json
+++ b/composer.json
@@ -8,41 +8,40 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.2.0",
         "ext-exif": "*",
         "ext-gd": "*",
-        "artesaos/seotools": "^0.22.0",
-        "blade-ui-kit/blade-icons": "^1.1",
-        "codeat3/blade-ant-design-icons": "^1.2",
-        "codeat3/blade-clarity-icons": "^1.3",
-        "doctrine/dbal": "^2.13",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "intervention/image": "^2.4",
-        "jenssegers/date": "^4.0",
-        "lab404/laravel-impersonate": "^1.2",
+        "artesaos/seotools": "^1.3",
+        "blade-ui-kit/blade-icons": "^1.6",
+        "codeat3/blade-ant-design-icons": "^2.0",
+        "codeat3/blade-clarity-icons": "^1.9",
+        "guzzlehttp/guzzle": "^7.8",
+        "intervention/image": "^2.7",
+        "jenssegers/date": "^2.0",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^10.0",
-        "laravel/helpers": "^1.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^4.0",
-        "livewire/livewire": "^2.8",
-        "matanyadaev/laravel-eloquent-spatial": "^2.10",
+        "laravel/helpers": "^1.7",
+        "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.5",
+        "livewire/livewire": "^3.4",
+        "matanyadaev/laravel-eloquent-spatial": "^4.2",
         "orangehill/iseed": "^3.0",
-        "spatie/laravel-sitemap": "^6.1",
-        "tcg/voyager": "1.6.*",
-        "tymon/jwt-auth": "dev-develop"
+        "tcg/voyager": "^1.7",
+        "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.6",
-        "spatie/laravel-ignition": "^2.0",
-        "fakerphp/faker": "^1.9.1",
-        "kitloong/laravel-migrations-generator": "^5.0",
-        "laravel/dusk": "^6.0",
-        "laravel/sail": "^1.4",
-        "mockery/mockery": "^1.3.1",
-        "pestphp/pest-plugin-laravel": "^1.0",
-        "phpunit/phpunit": "^10.0",
-        "slevomat/coding-standard": "^7.0",
-        "squizlabs/php_codesniffer": "^3.6"
+        "barryvdh/laravel-debugbar": "^3.13",
+        "fakerphp/faker": "^1.23",
+        "kitloong/laravel-migrations-generator": "^7.0",
+        "laravel/dusk": "^8.2",
+        "laravel/sail": "^1.29",
+        "mockery/mockery": "^1.6",
+        "pestphp/pest-plugin-laravel": "^2.3",
+        "phpunit/phpunit": "^10.5",
+        "slevomat/coding-standard": "^8.15",
+        "spatie/laravel-ignition": "^2.5",
+        "spatie/laravel-sitemap": "^7.2",
+        "squizlabs/php_codesniffer": "^3.9"
     },
     "autoload": {
         "psr-4": {
