--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Laravel CI
 
 on:
   push:
@@ -7,29 +7,63 @@ on:
     branches: [ "main" ]
 
 jobs:
-  laravel-tests:
-
-    runs-on: ubuntu-latest
-
+  laravel:
+    name: Laravel Testsuite
+    runs-on: ubuntu-20.04 # has mysql 8 installed by default
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.2'
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+      - name: Set Up Mysql 8
+        run: |
+          echo -e "Enable LOAD DATA LOCAL INFILE in my.cnf\n"
+          echo -e "SETTING secure-file-priv TO EMPTY STRING\n"
+          echo -e "[mysqld]\nsecure-file-priv=''" | sudo tee -a /etc/mysql/my.cnf
+          echo -e "SETTING local_infile TO ON\n"
+          echo -e "[mysqld]\nlocal_infile='ON'" | sudo tee -a /etc/mysql/my.cnf
+          echo -e "Start MYSQL service, it is off by default\n"
+          sudo systemctl enable mysql.service
+          sudo systemctl start mysql.service
+          echo -e "Creating Laravel Database\n"
+          mysql --host 127.0.0.1 -uroot -proot -e 'CREATE DATABASE IF NOT EXISTS laravel;'
+          echo -e "Check new settings\n"
+          mysql --host 127.0.0.1 -uroot -proot -e "SELECT @@global.secure_file_priv, @@global.local_infile"
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Composer Parallel Downloads
+        run: composer global require hirak/prestissimo
+
+      - name: Get Composer Cache Directory
+        id: get-composer-cache
+        run: |
+          echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - name: Cache Composer
+        uses: actions/cache@v1
+        id: composer-cache
+        with:
+          path: ${{ steps.get-composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
+      - name: Install composer dependencies
+        run: composer install --no-progress --prefer-dist --no-interaction --no-suggest --optimize-autoloader --no-scripts
+
+      - name: Clear Config
+        run: |
+          php artisan config:clear
+          php artisan cache:clear
+      - name: Prepare the application
+        run: |
+          cp .env.ci .env
+          php artisan key:generate
+      - name: Run Migrations
+        run: php artisan migrate --force -v
+
+      - name: Test with phpunit
+        run: vendor/bin/phpunit
+
+      - name: Run Sensiolabs security checks
+        run: |
+          test -d security-checker || git clone https://github.com/sensiolabs/security-checker.git
+          cd security-checker
+          composer install
+          php security-checker security:check ../composer.lock
