Change testing to pest

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -56,7 +56,7 @@ jobs:
         run: php artisan migrate --force -v
 
       - name: Test with phpunit
-        run: vendor/bin/phpunit
+        run: ./vendor/bin/pest
 
       - name: Run Sensiolabs security checks
         run: |
