--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.4",
+        "longman/telegram-bot": "^0.83.0",
         "matanyadaev/laravel-eloquent-spatial": "^4.2",
+        "monolog/monolog": "^3.6",
         "orangehill/iseed": "^3.0",
         "tcg/voyager": "^1.7",
         "tymon/jwt-auth": "^2.1"
