--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.4",
         "matanyadaev/laravel-eloquent-spatial": "^4.2",
+        "mcordingley/linearalgebra": "^3.0",
         "orangehill/iseed": "^3.0",
         "tcg/voyager": "^1.7",
         "tymon/jwt-auth": "^2.1"
