--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,8 +1,10 @@
 name: Node.js CI
 
 on:
-  # temp for testing puposes
-  push
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
