--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.8",
         "@primevue/auto-import-resolver": "^4.0.7",
+        "autoprefixer": "^10.4.20",
         "bootstrap": "^5.3.3",
         "cross-env": "^7.0.3",
         "eslint": "^9.11.0",
@@ -64,15 +65,11 @@
         "stylelint": "^16.9.0",
         "stylelint-config-standard": "^36.0.1",
         "stylelint-config-standard-scss": "^13.1.0",
-        "tailwind": "^4.0.0",
         "tailwindcss": "^3.4.12",
         "unplugin-vue-components": "^0.27.4",
         "vue": "^3.5.7",
         "vue-loader": "^17.4.2",
         "vue-template-compiler": "^2.7.16"
-    },
-    "overrides": {
-        "autoprefixer": "10.4.5"
     },
     "type": "module"
 }
