--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "vee-validate": "^4.13.2",
         "vite": "^5.4.7",
         "vite-svg-loader": "^5.1.0",
-        "vue-croppie": "^2.0.3",
+        "vue-advanced-cropper": "^2.8.9",
         "vue3-icons": "^0.1.13",
         "webpack": ">=5.94.0"
     },
