--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@babel/traverse": ">=7.25.6",
+        "@hcaptcha/vue3-hcaptcha": "^1.3.0",
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
         "@tiptap/core": "^2.7.2",
