--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 /node_modules
 /public/hot
-/public/js
-/public/css
-/public/frontend/css
-/public/frontend/js
 /public/storage
 /public/.well-known
-/public/mix-manifest.json
+/public/build
 /storage/*.key
 /vendor
 /.idea
