--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "dev": "vite",
         "build": "vite build",
         "prod": "npm run build",
+        "preview": "vite preview",
         "lint": "npm run lint-style && npm run lint-js",
         "lint-fix": "npm run lint-style -- --fix && npm run lint-js -- --fix",
         "lint-js": "eslint --max-warnings 0 \"resources/**/*.{js,vue}\"",
