--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "leaflet": "^1.9.4",
         "loader-utils": "^3.3.1",
         "lodash": "^4.17.21",
-        "moment": "^2.30.1",
+        "luxon": "^3.5.0",
         "postcss-scss": "^4.0.9",
         "primevue": "^4.0.7",
         "sass": "^1.79.3",
