--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "less-loader": "^12.2.0",
         "postcss": "^8.4.47",
         "resolve-url-loader": "^5.0.0",
+        "rollup-plugin-visualizer": "^5.12.0",
         "sass": "^1.78.0",
         "sass-loader": "^16.0.2",
         "stylelint": "^16.9.0",
