--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "livewire/livewire": "^3.4",
         "matanyadaev/laravel-eloquent-spatial": "^4.2",
         "mcordingley/linearalgebra": "^3.0",
+        "mobiledetect/mobiledetectlib": "^4.8",
         "orangehill/iseed": "^3.0",
         "staudenmeir/eloquent-eager-limit": "^1.8",
         "stevebauman/purify": "^6.2",
