--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_URL=[FILL]
 MYSQL_ROOT_PASSWORD=[fill]
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=watkanikdoen_app
 DB_USERNAME=[FILL]
