Database and permissions migration from Voyager to Filament

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "mobiledetect/mobiledetectlib": "^4.8",
         "orangehill/iseed": "^3.0",
         "spatie/icalendar-generator": "^2.6",
+        "spatie/laravel-permission": "^6.24",
         "staudenmeir/eloquent-eager-limit": "^1.8",
         "stevebauman/purify": "^6.2",
         "tcg/voyager": "^1.7",
