Improve image seeding

--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -1,3 +1,17 @@
 *
 !.gitignore
-!/settings
+!acties/
+acties/*
+!acties/.gitignore
+!avatars/
+avatars/*
+!avatars/.gitignore
+!organizers/
+organizers/*
+!organizers/.gitignore
+!referenties/
+referenties/*
+!referenties/.gitignore
+!reports/
+reports/*
+!reports/.gitignore
