--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,17 @@
     "type": "project",
     "require": {
         "php": "^8.4.0",
-        "laravel/framework": "^12.0",
         "artesaos/seotools": "^1.3",
         "blade-ui-kit/blade-icons": "^1.8",
         "codeat3/blade-ant-design-icons": "^1.9",
         "codeat3/blade-clarity-icons": "^1.10",
         "darkaonline/l5-swagger": "^8.6",
+        "dotswan/filament-map-picker": "2.1.2",
         "filament/filament": "^4.4",
         "guzzlehttp/guzzle": "^7.10",
         "intervention/image": "^3.11",
         "lab404/laravel-impersonate": "^1.7",
+        "laravel/framework": "^12.0",
         "laravel/helpers": "^1.8",
         "laravel/tinker": "^2.11",
         "laravel/ui": "^4.6",
@@ -27,6 +28,7 @@
         "spatie/icalendar-generator": "^3.2",
         "spatie/laravel-permission": "^6.24",
         "stevebauman/purify": "^6.3",
+        "tomatophp/filament-media-manager": "^4.0",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
