Add book resource and ISBN search functionality with APIs

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,8 @@ UMAMI_PASSWORD=[FILL]
 H_CAPTCHA_KEY=[FILL]
 H_CAPTCHA_SECRET=[FILL]
 
+HARDCOVER_BEARER_TOKEN=[FILL]
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
