--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@babel/traverse": ">=7.25.6",
         "@hcaptcha/vue3-hcaptcha": "^1.3.0",
         "@primeuix/themes": "^2.0.2",
+        "@primevue/forms": "^4.5.4",
         "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/typography": "^0.5.15",
         "@tiptap/core": "^2.7.2",
