--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
         "@hcaptcha/vue3-hcaptcha": "^1.3.0",
         "@primeuix/themes": "^2.0.2",
         "@primevue/forms": "^4.5.4",
-        "@tailwindcss/forms": "^0.5.9",
-        "@tailwindcss/typography": "^0.5.15",
         "@tiptap/core": "^2.7.2",
         "@tiptap/extension-character-count": "^2.7.2",
         "@tiptap/extension-underline": "^2.7.2",
@@ -25,57 +23,58 @@
         "@tiptap/vue-3": "^2.7.2",
         "@vee-validate/i18n": "^4.13.2",
         "@vee-validate/rules": "^4.13.2",
-        "@vitejs/plugin-vue": "^5.2.1",
-        "@vitejs/plugin-vue-jsx": "^4.1.1",
         "@vue-leaflet/vue-leaflet": "^0.10.1",
         "alpinejs": "^3.14.3",
         "axios": "^1.13.5",
         "date-fns": "^4.1.0",
         "exif-js": "^2.3.0",
-        "glob-all": "^3.3.1",
-        "laravel-vite-plugin": "^1.2.0",
         "leaflet": "^1.9.4",
-        "loader-utils": "^3.3.1",
         "lodash": "^4.17.21",
-        "postcss-scss": "^4.0.9",
         "primevue": "^4.0.7",
-        "sass": "^1.79.3",
-        "tailwindcss-primeui": "^0.6.1",
-        "typescript": "^5.6.2",
         "uuid": "^10.0.0",
         "vee-validate": "^4.13.2",
-        "vite": "^6.2.1",
-        "vite-svg-loader": "^5.1.0",
         "vue-advanced-cropper": "^2.8.9",
-        "vue3-icons": "^0.1.13",
-        "webpack": ">=5.94.0"
+        "vue3-icons": "^0.1.13"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.8",
         "@primevue/auto-import-resolver": "^4.0.7",
+        "@tailwindcss/forms": "^0.5.9",
         "@tailwindcss/postcss": "^4.1.18",
+        "@tailwindcss/typography": "^0.5.15",
         "@tailwindcss/vite": "^4.1.18",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vitejs/plugin-vue-jsx": "^4.1.1",
         "autoprefixer": "^10.4.20",
         "bootstrap": "^5.3.3",
         "cross-env": "^7.0.3",
         "eslint": "^9.11.0",
         "eslint-plugin-vue": "^9.28.0",
         "fast-glob": "^3.3.2",
+        "glob-all": "^3.3.1",
+        "laravel-vite-plugin": "^1.2.0",
         "less": "^4.2.0",
         "less-loader": "^12.2.0",
+        "loader-utils": "^3.3.1",
         "postcss": "^8.4.47",
+        "postcss-scss": "^4.0.9",
         "resolve-url-loader": "^5.0.0",
         "rollup-plugin-visualizer": "^5.12.0",
-        "sass": "^1.78.0",
+        "sass": "^1.79.3",
         "sass-loader": "^16.0.2",
         "stylelint": "^16.9.0",
         "stylelint-config-standard": "^36.0.1",
         "stylelint-config-standard-scss": "^13.1.0",
         "tailwindcss": "^4.1.18",
+        "tailwindcss-primeui": "^0.6.1",
+        "typescript": "^5.6.2",
         "unplugin-vue-components": "^0.27.4",
+        "vite": "^6.2.1",
+        "vite-svg-loader": "^5.1.0",
         "vue": "^3.5.7",
         "vue-loader": "^17.4.2",
-        "vue-template-compiler": "^2.7.16"
+        "vue-template-compiler": "^2.7.16",
+        "webpack": ">=5.94.0"
     },
     "type": "module"
 }
