--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint-js": "eslint --max-warnings 0 \"resources/**/*.{js,vue}\"",
         "lint-style": "stylelint \"./resources/**/*.scss\"",
         "lint-php": "./vendor/bin/phpcs .",
-        "lint-php-fix": "./vendor/bin/phpcbf ."
+        "lint-php-fix": "./vendor/bin/phpcbf .",
+        "format": "prettier --write \"resources/**/*.{js,vue,scss}\""
     },
     "dependencies": {
         "@babel/traverse": ">=7.25.6",
@@ -33,9 +34,12 @@
         "primevue": "^4.0.7",
         "uuid": "^10.0.0",
         "vee-validate": "^4.13.2",
-        "vue-advanced-cropper": "^2.8.9"
+        "vue-advanced-cropper": "^2.8.9",
+        "vue-sanitize-directive": "^0.2.1"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.3.4",
+        "@eslint/js": "^10.0.1",
         "@popperjs/core": "^2.11.8",
         "@primevue/auto-import-resolver": "^4.0.7",
         "@tailwindcss/forms": "^0.5.9",
@@ -47,16 +51,19 @@
         "autoprefixer": "^10.4.20",
         "bootstrap": "^5.3.3",
         "cross-env": "^7.0.3",
-        "eslint": "^9.11.0",
-        "eslint-plugin-vue": "^9.28.0",
+        "eslint": "^10.0.2",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-vue": "^10.8.0",
         "fast-glob": "^3.3.2",
         "glob-all": "^3.3.1",
+        "globals": "^17.3.0",
         "laravel-vite-plugin": "^1.2.0",
         "less": "^4.2.0",
         "less-loader": "^12.2.0",
         "loader-utils": "^3.3.1",
         "postcss": "^8.4.47",
         "postcss-scss": "^4.0.9",
+        "prettier": "3.8.1",
         "resolve-url-loader": "^5.0.0",
         "rollup-plugin-visualizer": "^5.12.0",
         "sass": "^1.79.3",
@@ -67,8 +74,10 @@
         "tailwindcss": "^4.1.18",
         "tailwindcss-primeui": "^0.6.1",
         "typescript": "^5.6.2",
+        "typescript-eslint": "^8.56.1",
         "unplugin-vue-components": "^0.27.4",
         "vite": "^6.2.1",
+        "vite-plugin-vue-devtools": "^8.0.6",
         "vite-svg-loader": "^5.1.0",
         "vue": "^3.5.7",
         "vue-loader": "^17.4.2"
